gnovm/cmd/gno/testdata/gno_precompile/08_build_flag_with_parse_error.txtar
# Run gno precompile with -gobuild flag on file with parse error

! gno precompile -gobuild .

! stdout .+
stderr 'main.gno: precompile: parse: main.gno:3:1: expected declaration, found invalid'

# no *.gen.go files are created
! exec test -f main.gno.gen.go

-- main.gno --
package main

invalid
